[package]
name = "github-webhook-to-buildit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
clap = { version = "4.4.11", features = ["derive", "env"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
